--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 
     <section class="slideshow-container" id="slideshow-container">
         <div class="mySlides fade">
-            <img src="./Media/buildings1.jpg">
+            <img src="./buildings1.jpg">
         </div>
         <div class="mySlides fade">
-            <img src="./Media/skyscapers-1.jpg">
+            <img src="./skyscapers-1.jpg">
         </div>
         <div class="mySlides fade">
-            <img src="./Media/interior-1.jpg">
+            <img src="./interior-1.jpg">
         </div>
         <div class="slider">
             <span class="dot"></span>
