--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZATELA</title>
     <meta name="description" content="Austeja Lastname  - Letting/Airbnb">
-    <link rel="shortcut icon" href="./IMG/favicon_ico?v=1" type="image/x-icon">
+    <link rel="shortcut icon" href="./Media/favicon_ico/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&family=Roboto:wght@300&display=swap"
@@ -72,13 +72,13 @@
 
     <section class="slideshow-container" id="slideshow-container">
         <div class="mySlides fade">
-            <img src="./buildings1.jpg">
+            <img src="./Media/buildings1.jpg">
         </div>
         <div class="mySlides fade">
-            <img src="./skyscapers-1.jpg">
+            <img src="./Media/skyscapers-1.jpg">
         </div>
         <div class="mySlides fade">
-            <img src="./interior-1.jpg">
+            <img src="./Media/interior-1.jpg">
         </div>
         <div class="slider">
             <span class="dot"></span>
