--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZATELA</title>
-    <meta name="description" content="Austeja Lastname  - Letting/Airbnb">
+    <meta name="description" content="ZATELA-Limited - Letting/Airbnb">
     <link rel="shortcut icon" href="./Media/logo.jpeg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
