Added thanks text for the form and changed font fm

--- a/index.html
+++ b/index.html
@@ -198,17 +198,18 @@
                     below!</p>
             </div>
 
-            <form action="https://formsubmit.co/" method="POST" class="form">
+            <form action="https://formsubmit.co/zatelaza@gmail.com" method="POST" class="form">
 
                 <input type="hidden" name="_captcha" value="false">
                 <input type="text" name="_honey" style="display:none">
                 <input type="hidden" name="_next" value="./thanks/thanks.html">
 
                 <label for="firstname">
-                    <input type="text" name="firstname" id="firstname" placeholder="Nom" autocomplete="given-name">
+                    <input type="text" name="firstname" id="firstname" placeholder="Firstname"
+                        autocomplete="given-name">
                 </label>
                 <label for="lastname">
-                    <input type="text" name="lastname" id="lastname" placeholder="Prénom" autocomplete="family-name">
+                    <input type="text" name="lastname" id="lastname" placeholder="Lastname" autocomplete="family-name">
                 </label>
                 <label for="email">
                     <input type="email" name="email" id="email" placeholder="Email" autocomplete="email" required>
