Changed text in form button

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <input type="email" name="email" id="email" placeholder="Email" autocomplete="email" required>
                 </label>
                 <textarea name="message" id="message" placeholder="Message"></textarea>
-                <input type="submit" class="btn" value="Envoyer">
+                <input type="submit" class="btn" value="Send">
             </form>
         </div>
 
