Added Facebook, LinkedIn and Instagram links

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 <div class="grid__item">
                     <ul class="socials list-unstyled">
                         <li>
-                            <a href="https://www.facebook.com/" target="_blank">
+                            <a href="https://www.facebook.com/zatelalimited/" target="_blank">
                                 <svg width="14" aria-hidden="true" class="icon facebook" focusable="false"
                                     data-prefix="fab" data-icon="facebook-f"
                                     class="svg-inline--fa fa-facebook-f fa-w-10" role="img"
@@ -242,7 +242,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com/">
+                            <a href="https://www.linkedin.com/company/zatela-limited/?viewAsMember=true">
                                 <svg width="14" aria-hidden="true" class="icon linkedin" focusable="false"
                                     data-prefix="fab" data-icon="linkedin-in"
                                     class="svg-inline--fa fa-linkedin-in fa-w-14" role="img"
@@ -254,7 +254,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/">
+                            <a href="https://www.instagram.com/zatelalimited/">
                                 <svg width="14" aria-hidden="true" class="icon insta" focusable="false"
                                     data-prefix="fab" data-icon="instagram" class="svg-inline--fa fa-instagram fa-w-14"
                                     role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
