Changed target="blank" to  soc icons

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/company/zatela-limited/?viewAsMember=true">
+                        <a href="https://www.linkedin.com/company/zatela-limited/?viewAsMember=true" target="_blank">
                             <svg aria-hidden="true" class="icon linkedin" focusable="false" data-prefix="fab"
                                 data-icon="linkedin-in" class="svg-inline--fa fa-linkedin-in fa-w-14" role="img"
                                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
@@ -54,7 +54,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/zatelalimited/">
+                        <a href="https://www.instagram.com/zatelalimited/" target="_blank">
                             <svg aria-hidden="true" class="icon insta" focusable="false" data-prefix="fab"
                                 data-icon="instagram" class="svg-inline--fa fa-instagram fa-w-14" role="img"
                                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
@@ -242,7 +242,8 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com/company/zatela-limited/?viewAsMember=true">
+                            <a href="https://www.linkedin.com/company/zatela-limited/?viewAsMember=true"
+                                target="_blank">
                                 <svg width="14" aria-hidden="true" class="icon linkedin" focusable="false"
                                     data-prefix="fab" data-icon="linkedin-in"
                                     class="svg-inline--fa fa-linkedin-in fa-w-14" role="img"
@@ -254,7 +255,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/zatelalimited/">
+                            <a href="https://www.instagram.com/zatelalimited/" target="_blank">
                                 <svg width="14" aria-hidden="true" class="icon insta" focusable="false"
                                     data-prefix="fab" data-icon="instagram" class="svg-inline--fa fa-instagram fa-w-14"
                                     role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
