changed contact decription and title

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZATELA</title>
-    <meta name="description" content="ZATELA-Limited - Letting/Airbnb">
+    <title>Zatela</title>
+    <meta name="description" content="Zatela-Limited - Letting/Airbnb">
     <link rel="shortcut icon" href="./Media/logo.jpeg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -194,8 +194,8 @@
             <div class="section-header">
                 <h2 class="section-title">Contact</h2>
                 <p>Need assistance or have questions about booking your next getaway or listing your property on our
-                    platform? We're here to help! Get in touch with our friendly team using the contact information form
-                    below!</p>
+                    platform? We are here to help! Get in touch with our friendly team using the contact information
+                    form below!</p>
             </div>
 
             <form action="https://formsubmit.co/zatelaza@gmail.com" method="POST" class="form">
@@ -205,11 +205,11 @@
                 <input type="hidden" name="_next" value="./thanks/thanks.html">
 
                 <label for="firstname">
-                    <input type="text" name="firstname" id="firstname" placeholder="Firstname"
+                    <input type="text" name="firstname" id="firstname" placeholder="First name"
                         autocomplete="given-name">
                 </label>
                 <label for="lastname">
-                    <input type="text" name="lastname" id="lastname" placeholder="Lastname" autocomplete="family-name">
+                    <input type="text" name="lastname" id="lastname" placeholder="Last name" autocomplete="family-name">
                 </label>
                 <label for="email">
                     <input type="email" name="email" id="email" placeholder="Email" autocomplete="email" required>
@@ -225,7 +225,7 @@
         <div class="container">
             <div class="grid">
                 <div class="grid__item">
-                    <p class="name">ZATELA-Limited</p>
+                    <p class="name">Zatela-Limited</p>
                 </div>
                 <div class="grid__item">
                     <ul class="socials list-unstyled">
