--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     </ul>
                 </div>
                 <div class="grid__item">
-                    <p class="copyright">Copyright © 2023 ZATELA-Limited. All Rights Reserved.</p>
+                    <p class="copyright">Copyright © 2023 Zatela-Limited. All Rights Reserved.</p>
                 </div>
             </div>
         </div>
