--- a/index.html
+++ b/index.html
@@ -115,10 +115,62 @@
                             <div class="container">
                                 <div class="grid">
                                     <div class="grid__item">
-                                        <img src="https://picsum.photos/700/400?random=2" loading="lazy" width="560"
-                                            height="373" class="card__image" alt="Picture of Appartment Available" />
-                                        <img src="https://picsum.photos/600/400?random=22" loading="lazy" width="560"
-                                            height="373" class="card__image" alt="Picture of Appartment Available" />
+                                        <div class="gallery-container">
+                                            <!-- Full-width images with number and caption text -->
+                                            <div class="gallery fade_2">
+                                                <div class="numbertext">1 / 10</div>
+                                                <img src="Media/photo1.jpeg" style="width:100%">
+                                            </div>
+
+                                            <div class="gallery fade_2">
+                                                <div class="numbertext">2 / 10</div>
+                                                <img src="Media/photo2.jpeg" style="width:100%">
+                                            </div>
+
+                                            <div class="gallery fade_2">
+                                                <div class="numbertext">3 / 10</div>
+                                                <img src="Media/photo3.jpeg" style="width:100%">
+                                            </div>
+
+                                            <div class="gallery fade_2">
+                                                <div class="numbertext">4 / 10</div>
+                                                <img src="Media/photo4.jpeg" style="width:100%">
+                                            </div>
+
+                                            <div class="gallery fade_2">
+                                                <div class="numbertext">5 / 10</div>
+                                                <img src="Media/photo5.jpeg" style="width:100%">
+                                            </div>
+
+                                            <div class="gallery fade_2">
+                                                <div class="numbertext">6 / 10</div>
+                                                <img src="Media/photo6.jpeg" style="width:100%">
+                                            </div>
+
+                                            <div class="gallery fade_2">
+                                                <div class="numbertext">7 / 10</div>
+                                                <img src="Media/photo7.jpeg" style="width:100%">
+                                            </div>
+
+                                            <div class="gallery fade_2">
+                                                <div class="numbertext">8 / 10</div>
+                                                <img src="Media/photo8.jpeg" style="width:100%">
+                                            </div>
+
+                                            <div class="gallery fade_2">
+                                                <div class="numbertext">9 / 10</div>
+                                                <img src="Media/photo9.jpeg" style="width:100%">
+                                            </div>
+
+                                            <div class="gallery fade_2">
+                                                <div class="numbertext">10 / 10</div>
+                                                <img src="Media/photo10.jpeg" style="width:100%">
+                                            </div>
+
+                                            <!-- Next and previous buttons -->
+                                            <a class="prev" onclick="plusGallery(-1)">&#10094;</a>
+                                            <a class="next" onclick="plusGallery(1)">&#10095;</a>
+                                        </div>
                                     </div>
                                     <div class="grid__item">
                                         <h2 class="modal__title h2">Luxury Flat</h2>
