Changed the logo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <header class="header">
         <div class="container d-flex">
-            <div class="logo">ZATELA</div>
+            <div class="logo">Zatela</div>
             <nav class="navbar">
                 <ul class="menu list-unstyled">
                     <li><a href="#slideshow-container">Home</a></li>
