--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zatela</title>
     <meta name="description" content="Zatela-Limited - Letting/Airbnb">
-    <link rel="icon" type="image/png" href="./Media/logo.jpeg" />
-    <link rel="shortcut icon" href="./Media/logo.jpeg" type="image/x-icon">
+    <link rel="icon" type="image/png" href="./Media/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&family=Roboto:wght@300&display=swap"
