--- a/index.html
+++ b/index.html
@@ -250,7 +250,8 @@
                     form below!</p>
             </div>
 
-            <form action="https://formsubmit.co/zatelaza@gmail.com" method="POST" class="form">
+            <form action="https://formsubmit.co/c9280222017b135471e36a61c9391aea" method="POST" class="form"
+                target="_blank">
 
                 <input type="hidden" name="_captcha" value="false">
                 <input type="text" name="_honey" style="display:none">
